osh/openstack/13-nova/manifests/nova/templates/daemonset-compute.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    openstackhelm.openstack.org/release_uuid: ''
  labels:
    application: nova
    component: compute
    release_group: nova
  name: nova-compute-default
spec:
  minReadySeconds: 0
  selector:
    matchLabels:
      application: nova
      component: compute
      release_group: nova
  template:
    metadata:
      annotations:
        configmap-bin-hash: c0731208acf9da1f9ec571309a6a67d14bf8940fee2f770cd1572c4b21f56bd1
        configmap-etc-hash: 6c1531f286efe9929d1d56082826e742ef53ffe0d5d9d547e3b638eb86a55fb2
        openstackhelm.openstack.org/release_uuid: ''
      labels:
        application: nova
        component: compute
        release_group: nova
    spec:
      containers:
      - command:
        - /tmp/nova-compute.sh
        image: ghcr.io/cloudnull/genestack/nova-efi:2023.1-ubuntu_jammy
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - python
            - /tmp/health-probe.py
            - --config-file
            - /etc/nova/nova.conf
            - --service-queue-name
            - compute
            - --liveness-probe
          initialDelaySeconds: 120
          periodSeconds: 90
          timeoutSeconds: 70
        name: nova-compute
        readinessProbe:
          exec:
            command:
            - python
            - /tmp/health-probe.py
            - --config-file
            - /etc/nova/nova.conf
            - --service-queue-name
            - compute
          initialDelaySeconds: 80
          periodSeconds: 90
          timeoutSeconds: 70
        resources:
          limits:
            cpu: 10000m
            memory: 6024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          privileged: true
          readOnlyRootFilesystem: true
        terminationMessagePath: /var/log/termination-log
        volumeMounts:
        - mountPath: /dev/pts
          name: dev-pts
        - mountPath: /tmp
          name: pod-tmp
        - mountPath: /tmp/nova-compute.sh
          name: nova-bin
          readOnly: true
          subPath: nova-compute.sh
        - mountPath: /tmp/health-probe.py
          name: nova-bin
          readOnly: true
          subPath: health-probe.py
        - mountPath: /etc/nova/nova.conf
          name: nova-etc
          readOnly: true
          subPath: nova-compute.conf
        - mountPath: /etc/nova/logging.conf
          name: nova-etc
          readOnly: true
          subPath: logging.conf
        - mountPath: /etc/nova/api-paste.ini
          name: nova-etc
          readOnly: true
          subPath: api-paste.ini
        - mountPath: /etc/nova/policy.yaml
          name: nova-etc
          readOnly: true
          subPath: policy.yaml
        - mountPath: /etc/sudoers.d/kolla_nova_sudoers
          name: nova-etc
          readOnly: true
          subPath: nova_sudoers
        - mountPath: /etc/nova/rootwrap.conf
          name: nova-etc
          readOnly: true
          subPath: rootwrap.conf
        - mountPath: /etc/nova/rootwrap.d/compute.filters
          name: nova-etc
          readOnly: true
          subPath: compute.filters
        - mountPath: /etc/nova/rootwrap.d/network.filters
          name: nova-etc
          readOnly: true
          subPath: network.filters
        - mountPath: /etc/ceph
          mountPropagation: Bidirectional
          name: etcceph
        - mountPath: /lib/modules
          name: libmodules
          readOnly: true
        - mountPath: /var/lib/nova
          mountPropagation: Bidirectional
          name: varlibnova
        - mountPath: /var/lib/libvirt
          mountPropagation: Bidirectional
          name: varliblibvirt
        - mountPath: /run
          name: run
        - mountPath: /sys/fs/cgroup
          name: cgroup
          readOnly: true
        - mountPath: /tmp/pod-shared
          name: pod-shared
        - mountPath: /etc/machine-id
          name: machine-id
          readOnly: true
      dnsPolicy: ClusterFirstWithHostNet
      hostIPC: true
      hostNetwork: true
      hostPID: true
      nodeSelector:
        openstack-compute-node: enabled
      securityContext:
        runAsUser: 42424
      serviceAccountName: nova-compute
      volumes:
      - emptyDir: {}
        name: pod-tmp
      - configMap:
          defaultMode: 365
          name: nova-bin
        name: nova-bin
      - name: nova-etc
        secret:
          defaultMode: 292
          secretName: nova-compute-default
      - hostPath:
          path: /var/lib/openstack-helm/compute/nova
        name: etcceph
      - configMap:
          defaultMode: 292
          name: ceph-etc
        name: ceph-etc
      - hostPath:
          path: /dev/pts
        name: dev-pts
      - hostPath:
          path: /lib/modules
        name: libmodules
      - hostPath:
          path: /var/lib/nova
        name: varlibnova
      - hostPath:
          path: /var/lib/libvirt
        name: varliblibvirt
      - hostPath:
          path: /run
        name: run
      - hostPath:
          path: /sys/fs/cgroup
        name: cgroup
      - emptyDir: {}
        name: pod-shared
      - hostPath:
          path: /etc/machine-id
        name: machine-id
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
