osh/openstack/13-nova/manifests/nova/templates/deployment-api-metadata.yaml
---
# Source: nova/templates/deployment-api-metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-api-metadata
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: metadata
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: metadata
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "c0731208acf9da1f9ec571309a6a67d14bf8940fee2f770cd1572c4b21f56bd1"
        configmap-etc-hash: "eaaacdc05c614c2e8c4bb19019c2bfdc5dd838f53d49d256ec41e15740a98b1f"
        
    spec:
      serviceAccountName: nova-api-metadata
      securityContext:
        runAsUser: 42424
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - metadata
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled

      terminationGracePeriodSeconds: 30
      containers:
        - name: nova-api
          image: "docker.io/openstackhelm/nova:2023.1-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 8000m
              memory: 6024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command:
            - /tmp/nova-api-metadata.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/nova-api-metadata.sh
                  - stop
          ports:
            - containerPort: 8775
          livenessProbe:
            httpGet:
              path: /
              port: 8775
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 8775
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 15
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: nova-bin
              mountPath: /tmp/nova-api-metadata.sh
              subPath: nova-api-metadata.sh
              readOnly: true
            - name: nova-bin
              mountPath: /sbin/iptables
              subPath: fake-iptables.sh
              readOnly: true
            - name: nova-bin
              mountPath: /sbin/iptables-restore
              subPath: fake-iptables.sh
              readOnly: true
            - name: nova-bin
              mountPath: /sbin/iptables-save
              subPath: fake-iptables.sh
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true
            - name: nova-etc
              # NOTE (Portdirect): We mount here to override Kollas
              # custom sudoers file when using Kolla images, this
              # location will also work fine for other images.
              mountPath: /etc/sudoers.d/kolla_nova_sudoers
              subPath: nova_sudoers
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/rootwrap.conf
              subPath: rootwrap.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/rootwrap.d/api-metadata.filters
              subPath: api-metadata.filters
              readOnly: true
            - name: pod-shared
              mountPath: /tmp/pod-shared
              readOnly: true                        

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
        - name: pod-shared
          emptyDir: {}
