osh/openstack/13-nova/manifests/nova/templates/deployment-api-osapi.yaml
---
# Source: nova/templates/deployment-api-osapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-api-osapi
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: os-api
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: os-api
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: os-api
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "c4c454e8c37e9933e55ad5b32a463273a4dbd9c2fcb2d6034da6f28f96df020a"
        configmap-etc-hash: "bb4537936a87b2e8165fc90bd308e4214337e96e72d789d0eca3b2e7bc3b25f0"
        
    spec:
      serviceAccountName: nova-api-osapi
      securityContext:
        runAsUser: 42424
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - os-api
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled

      terminationGracePeriodSeconds: 30
      containers:
        - name: nova-osapi
          image: "docker.io/openstackhelm/nova:2023.1-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 8000m
              memory: 6024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command:
            - /tmp/nova-api.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/nova-api.sh
                  - stop
          ports:
            - name: n-api
              containerPort: 8774
          livenessProbe:
            httpGet:
              path: /
              port: 8774
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 8774
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 15
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: pod-var-nova
              mountPath: /var/lib/nova
            - name: nova-bin
              mountPath: /tmp/nova-api.sh
              subPath: nova-api.sh
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true                                    

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: pod-var-nova
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
