osh/openstack/13-nova/manifests/nova/templates/deployment-conductor.yaml
---
# Source: nova/templates/deployment-conductor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-conductor
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: conductor
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: conductor
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: conductor
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "c0731208acf9da1f9ec571309a6a67d14bf8940fee2f770cd1572c4b21f56bd1"
        configmap-etc-hash: "eaaacdc05c614c2e8c4bb19019c2bfdc5dd838f53d49d256ec41e15740a98b1f"
        
    spec:
      serviceAccountName: nova-conductor
      securityContext:
        runAsUser: 42424
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - conductor
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled

      containers:
        - name: nova-conductor
          image: "docker.io/openstackhelm/nova:2023.1-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 8000m
              memory: 6024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          livenessProbe:
            exec:
              command:
              - python
              - /tmp/health-probe.py
              - --config-file
              - /etc/nova/nova.conf
              - --service-queue-name
              - conductor
              - --liveness-probe
            initialDelaySeconds: 120
            periodSeconds: 90
            timeoutSeconds: 70
          readinessProbe:
            exec:
              command:
              - python
              - /tmp/health-probe.py
              - --config-file
              - /etc/nova/nova.conf
              - --service-queue-name
              - conductor
            initialDelaySeconds: 80
            periodSeconds: 90
            timeoutSeconds: 70
          command:
            - /tmp/nova-conductor.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: nova-bin
              mountPath: /tmp/nova-conductor.sh
              subPath: nova-conductor.sh
              readOnly: true
            - name: nova-bin
              mountPath: /tmp/health-probe.py
              subPath: health-probe.py
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true                                    

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
