osh/openstack/13-nova/manifests/nova/templates/deployment-novncproxy.yaml
---
# Source: nova/templates/deployment-novncproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-novncproxy
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: novnc-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: novnc-proxy
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: novnc-proxy
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "c4c454e8c37e9933e55ad5b32a463273a4dbd9c2fcb2d6034da6f28f96df020a"
        configmap-etc-hash: "bb4537936a87b2e8165fc90bd308e4214337e96e72d789d0eca3b2e7bc3b25f0"
        
    spec:
      serviceAccountName: nova-novncproxy
      securityContext:
        runAsUser: 42424
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - novnc-proxy
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled

      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: nova-novncproxy
          image: "docker.io/openstackhelm/nova:2023.1-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 60
            tcpSocket:
              port: 6080
            timeoutSeconds: 15
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 60
            tcpSocket:
              port: 6080
            timeoutSeconds: 15
          command:
            - /tmp/nova-console-proxy.sh
          ports:
            - name: n-novnc
              containerPort: 6080
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: nova-bin
              mountPath: /tmp/nova-console-proxy.sh
              subPath: nova-console-proxy.sh
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: pod-usr-share-novnc
              mountPath: /usr/share/novnc
              readOnly: true
            - name: pod-shared
              mountPath: /tmp/pod-shared                                                

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
        - name: pod-usr-share-novnc
          emptyDir: {}
        - name: pod-shared
          emptyDir: {}
