osh/openstack/13-nova/manifests/nova/templates/deployment-scheduler.yaml
---
# Source: nova/templates/deployment-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-scheduler
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: scheduler
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: scheduler
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "c4c454e8c37e9933e55ad5b32a463273a4dbd9c2fcb2d6034da6f28f96df020a"
        configmap-etc-hash: "bb4537936a87b2e8165fc90bd308e4214337e96e72d789d0eca3b2e7bc3b25f0"
        
    spec:
      serviceAccountName: nova-scheduler
      securityContext:
        runAsUser: 42424
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - scheduler
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled

      containers:
        - name: nova-scheduler
          image: "docker.io/openstackhelm/nova:2023.1-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 10000m
              memory: 6024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          livenessProbe:
            exec:
              command:
              - python
              - /tmp/health-probe.py
              - --config-file
              - /etc/nova/nova.conf
              - --service-queue-name
              - scheduler
              - --liveness-probe
            initialDelaySeconds: 120
            periodSeconds: 90
            timeoutSeconds: 70
          readinessProbe:
            exec:
              command:
              - python
              - /tmp/health-probe.py
              - --config-file
              - /etc/nova/nova.conf
              - --service-queue-name
              - scheduler
            initialDelaySeconds: 80
            periodSeconds: 90
            timeoutSeconds: 70
          command:
            - /tmp/nova-scheduler.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: nova-bin
              mountPath: /tmp/nova-scheduler.sh
              subPath: nova-scheduler.sh
              readOnly: true
            - name: nova-bin
              mountPath: /tmp/health-probe.py
              subPath: health-probe.py
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true                                    

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
